project(solutions)

include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/test)

add_executable(0_1_knapsack 0_1_knapsack.cpp)
add_executable(0_sum_subset 0_sum_subset.cpp)
add_executable(2_difference 2_difference.cpp)
add_executable(2_exists 2_exists.cpp)
add_executable(2_for_all 2_for_all.cpp)
add_executable(2_sum 2_sum.cpp)
add_executable(3_sum_closest 3_sum_closest.cpp)
add_executable(3_sum 3_sum.cpp)
add_executable(4_sum 4_sum.cpp)
add_executable(add_binary add_binary.cpp)
add_executable(add_two_number_list add_two_number_list.cpp)
add_executable(add_operators_in_string add_operators_in_string.cpp)
add_executable(addingcredits adding_credits.cpp)
add_executable(anagrams anagrams.cpp)
add_executable(anonymous_letter anonymous_letter.cpp)
add_executable(approximate_sort approximate_sort.cpp)
add_executable(arbitrage arbitrage.cpp)
add_executable(async_thread async_thread.cpp)
add_executable(average_top_3_scores average_top_3_scores.cpp)
add_executable(balanced_binary_tree balanced_binary_tree.cpp binary_tree_prototype.h)
add_executable(bentleybsearch bentley_bsearch.cpp)
add_executable(biggest_product_n_1 biggest_product_n_1.cpp)
add_executable(biggest_product_n_1_math biggest_product_n_1_math.cpp)
add_executable(bignumber_multiplication big_number_multiplication.cpp)
add_executable(binary_tree_level_order_bottom_up binary_tree_level_order_bottom_up.cpp)
add_executable(binary_tree_postorder_traversal_iterative_alternative binary_tree_postorder_traversal_iterative_alternative.cpp)
add_executable(binary_tree_postorder_traversal_iterative binary_tree_postorder_traversal_iterative.cpp)
add_executable(binary_tree_preorder_traversal_iterative binary_tree_preorder_traversal_iterative.cpp)
add_executable(binary_tree_zigzag_level_order_traversal binary_tree_zigzag_level_order_traversal.cpp)
add_executable(binary_search_ai binary_search_ai=i.cpp)
add_executable(binary_search_circular_array binary_search_circular_array.cpp)
add_executable(binary_search_circular_array_with_duplicates binary_search_circular_array_with_duplicates.cpp)
add_executable(binary_search_first_k binary_search_first_k.cpp)
add_executable(binary_search_larger_k binary_search_larger_k.cpp)
add_executable(binary_search_unknown_length binary_search_unknown_length.cpp)
add_executable(binary_tree_level_order binary_tree_level_order.cpp)
add_executable(binary_tree_lock binary_tree_lock.cpp)
add_executable(binary_tree_to_doubly_linked_list binary_tree_to_doubly_linked_list.cpp)
add_executable(bonus_improved bonus_improved.cpp)
add_executable(bonus bonus.cpp)
add_executable(bst_lowest_common_ancestor bst_lowest_common_ancestor.cpp)
add_executable(bst_sorted_order bst_sorted_order.cpp)
add_executable(bst_to_sorted_doubly_list bst_to_sorted_doubly_list.cpp)
add_executable(build_bst_from_sorted_array build_bst_from_sorted_array.cpp)
add_executable(buy_and_sell_stock_twice buy_and_sell_stock_twice.cpp)
add_executable(buy_and_sell_stock buy_and_sell_stock.cpp)
add_executable(can_string_be_palindrome can_string_be_palindrome.cpp)
add_executable(celebrity_finding celebrity_finding.cpp)
add_executable(checking_cycle checking_cycle.cpp)
add_executable(checking_cycle_alternative checking_cycle_alternative.cpp)
add_executable(circular_queue circular_queue.cpp)
add_executable(climb_stairs climb_stairs.cpp)
add_executable(clone_graph clone_graph.cpp)
add_executable(close_search close_search.cpp)
add_executable(closest_int_same_bits_alternative closest_int_same_bits_alternative.cpp)
add_executable(closest_int_same_bits_alternative2 closest_int_same_bits_alternative2.cpp)
add_executable(closest_int_same_bits closest_int_same_bits.cpp)
add_executable(closest_pair_points closest_pair_points.cpp)
add_executable(closest_palindrome closest_palindrome.cpp)
add_executable(closest_stars closest_stars.cpp)
add_executable(closest_to_median closest_to_median.cpp)
add_executable(coin_change coin_change.cpp)
add_executable(collatz_conjecture collatz_conjecture.cpp)
add_executable(combinations_unique combinations_unique.cpp)
add_executable(combinations combinations.cpp)
add_executable(compare_k_th_largest_in_heap compare_k_th_largest_in_heap.cpp)
add_executable(completion_search completion_search.cpp)
add_executable(completion_search_space_efficient completion_search_space_efficient.cpp)
add_executable(compute_random_permutation compute_random_permutation.cpp)
add_executable(computing_binomial_coefficients computing_binomial_coefficients.cpp)
add_executable(computing_x_n computing_x^n.cpp)
add_executable(connect_leaves_binary_tree connect_leaves_binary_tree.cpp)
add_executable(container_with_most_water container_with_most_water.cpp)
add_executable(conversion_sorted_array conversion_sorted_array.cpp)
add_executable(convert_base convert_base.cpp)
add_executable(copying_postings_list copying_postings_list.cpp)
add_executable(count_bits count_bits.cpp)
add_executable(count_inversions count_inversions.cpp)
add_executable(count_occurrences_in_sentence count_occurrences_in_sentence.cpp)
add_executable(cyclic_right_shift cyclic_right_shift.cpp)
add_executable(delete_list delete_list.cpp)
add_executable(deletion_list deletion_list.cpp)
add_executable(descendant_and_ancestor descendant_and_ancestor.cpp)
add_executable(distinct_sorted_list distinct_sorted_list.cpp)
add_executable(division division.cpp)
add_executable(division_no_operator division_no_operator.cpp)
add_executable(divisionfloat division_float.cpp)
add_executable(doors doors.cpp)
add_executable(drawing_skylines drawing_skylines.cpp)
add_executable(drawing_skylines_alternative drawing_skylines_alternative.cpp)
add_executable(dutch_national_flag dutch_national_flag.cpp)
add_executable(dutch_national_flag_slow_inplace dutch_national_flag_slow_inplace.cpp)
add_executable(dutch_national_flag_two_passes dutch_national_flag_two_passes.cpp)
add_executable(elias_coding elias_coding.cpp)
add_executable(eliminate_duplicate eliminate_duplicate.cpp)
add_executable(equiv_classes equiv_classes.cpp)
add_executable(even_odd_array even_odd_array.cpp)
add_executable(even_odd_merge_linked_list even_odd_merge_linked_list.cpp)
add_executable(exterior_binary_tree exterior_binary_tree.cpp)
add_executable(fibonacci fibonacci.cpp)
add_executable(find_element_appears_once find_element_appears_once.cpp)
add_executable(find_k_largest_bst find_k_largest_bst.cpp)
add_executable(find_kth_element_in_two_sorted_arrays find_kth_element_in_two_sorted_arrays.cpp)
add_executable(find_longest_arithmetic_progression find_longest_arithmetic_progression.cpp)
add_executable(find_missing_and_duplicate find_missing_and_duplicate.cpp)
add_executable(find_missing_and_duplicate_xor find_missing_and_duplicate_xor.cpp)
add_executable(finding_min_max finding_min_max.cpp)
add_executable(first_missing_positive first_missing_positive.cpp)
add_executable(gassing_up gassing_up.cpp)
add_executable(gaussian_elimination gaussian_elimination.cpp)
add_executable(gaussian_primes gaussian_primes.cpp)
add_executable(gcd gcd.cpp)
add_executable(gcd1 gcd1.cpp)
add_executable(generate_parentheses generate_parentheses.cpp)
add_executable(generate_spiral_matrix generate_spiral_matrix.cpp)
add_executable(generating_a_b_sqrt2_improved generating_a_b_sqrt2_improved.cpp)
add_executable(generating_a_b_sqrt2 generating_a_b_sqrt2.cpp)
add_executable(gray_code_backtrack gray_code_backtrack.cpp)
add_executable(gray_code gray_code.cpp)
add_executable(hash_dictionary hash_dictionary.cpp)
add_executable(height_determination height_determination.cpp)
add_executable(highest_affinity_pairs highest_affinity_pairs.cpp)
add_executable(house_majority house_majority.cpp)
add_executable(huffman_encoding huffman_encoding.cpp)
add_executable(image_compression image_compression.cpp)
add_executable(indirect_sort indirect_sort.cpp)
add_executable(inorder_traversal_with_parent inorder_traversal_with_parent.cpp)
add_executable(insert_interval insert_interval.cpp)
add_executable(insert_list insert_list.cpp)
add_executable(insertion_deletion_bst insertion_deletion_bst.cpp)
add_executable(insertion_sort_list insertion_sort_list.cpp)
add_executable(integer_to_roman integer_to_roman.cpp)
add_executable(interconverting_string_integer interconverting_string_integer.cpp)
add_executable(interleaving_string interleaving_string.cpp)
add_executable(intersect_rectangle intersect_rectangle.cpp)
add_executable(intersect_sorted_arrays intersect_sorted_arrays.cpp)
add_executable(is_binary_tree_a_bst is_binary_tree_a_bst.cpp)
add_executable(is_binary_tree_a_bst_bfs is_binary_tree_a_bst_bfs.cpp)
add_executable(is_binary_tree_a_bst_const_space is_binary_tree_a_bst_const_space.cpp)
add_executable(is_palindromic is_palindromic.cpp)
add_executable(job_assignment job_assignment.cpp)
add_executable(jump_game_min_steps jump_game_min_steps.cpp)
add_executable(jump_game jump_game.cpp)
add_executable(justify_text justify_text.cpp)
add_executable(k_balanced_binary_tree k_balanced_binary_tree.cpp)
add_executable(k_largest_elements_binary_heap k_largest_elements_binary_heap.cpp)
add_executable(k_th_element_streaming k_th_element_streaming.cpp)
add_executable(k_th_largest_element_large_n k_th_largest_element_large_n.cpp)
add_executable(k_th_node_binary_tree k_th_node_binary_tree.cpp)
add_executable(k_th_permutation k_th_permutation.cpp)
#add_executable(largearray largearray.c) #cannot be compiled
add_executable(largest_rectangle_under_skyline largest_rectangle_under_skyline.cpp)
add_executable(lazy_init lazy_init.cpp)
add_executable(lead_changes lead_changes.cpp)
add_executable(length_of_last_word length_of_last_word.cpp)
add_executable(levenshtein_distance levenshtein_distance.cpp)
add_executable(line_most_points line_most_points.cpp)
add_executable(list_pivoting list_pivoting.cpp)
add_executable(load_balancing load_balancing.cpp)
add_executable(longest_contained_range longest_contained_range.cpp)
add_executable(longest_subarray_with_distinct_entries longest_subarray_with_distinct_entries.cpp)
add_executable(longest_substring_without_repeating_characters longest_substring_without_repeating_characters.cpp)
add_executable(longest_valid_parentheses longest_valid_parentheses.cpp)
add_executable(longest_increasing_subarray longest_increasing_subarray.cpp)
add_executable(longest_nondecreasing_subsequence longest_nondecreasing_subsequence.cpp)
add_executable(longest_subarray_k longest_subarray_k.cpp)
add_executable(longest_subarray_k_improved longest_subarray_k_improved.cpp)
add_executable(longest_valid_parentheses_const_space longest_valid_parentheses_const_space.cpp)
add_executable(look_and_say look_and_say.cpp)
add_executable(lowest_common_ancestor lowest_common_ancestor.cpp)
add_executable(lowest_common_ancestor_hash lowest_common_ancestor_hash.cpp)
add_executable(lowest_common_ancestor_no_parent lowest_common_ancestor_no_parent.cpp)
add_executable(lrucache lru_cache.cpp)
add_executable(matrix_rotation_flip matrix_rotation_flip.cpp)
add_executable(matrix_rotation matrix_rotation.cpp)
add_executable(matrix_rotation_constant matrix_rotation_constant.cpp)
add_executable(matrix_rotation_naive matrix_rotation_naive.cpp)
add_executable(matrix_search matrix_search.cpp)
add_executable(max_sum_subarray max_sum_subarray.cpp)
add_executable(max_concatenation_numbers max_concatenation_numbers.cpp)
add_executable(max_difference_k_pairs max_difference_k_pairs.cpp)
add_executable(max_difference_unlimited_pairs max_difference_unlimited_pairs.cpp)
add_executable(max_submatrix_rectangle max_submatrix_rectangle.cpp)
add_executable(max_submatrix_rectangle_improved max_submatrix_rectangle_improved.cpp)
add_executable(max_submatrix_square max_submatrix_square.cpp)
add_executable(maximum_container maximum_container.cpp)
add_executable(maximum_minimum_difference_k maximum_minimum_difference_k.cpp)
add_executable(maximum_sliding_window maximum_sliding_window.cpp)
add_executable(maximum_sliding_window_template maximum_sliding_window_template.cpp)
add_executable(maximum_subarray_in_circular_array maximum_subarray_in_circular_array.cpp)
add_executable(maximum_subarray_in_circular_array_constant_space maximum_subarray_in_circular_array_constant_space.cpp)
add_executable(median_sorted_circular_linked_list median_sorted_circular_linked_list.cpp)
add_executable(merge_two_sorted_arrays_in_place merge_two_sorted_arrays_in_place.cpp)
add_executable(merge_contacts merge_contacts.cpp)
add_executable(merge_sorted_arrays merge_sorted_arrays.cpp)
add_executable(merge_sorted_lists merge_sorted_lists.cpp)
add_executable(merge_two_bsts merge_two_bsts.cpp)
add_executable(minimum_distance_3_sorted_arrays minimum_distance_3_sorted_arrays.cpp)
add_executable(minimum_subarray_difference minimum_subarray_difference.cpp)
add_executable(minimum_waiting_time minimum_waiting_time.cpp)
add_executable(missing_element missing_element.cpp)
add_executable(morris_traversal morris_traversal.cpp)
add_executable(multibet_card_color_game multibet_card_color_game.cpp)
add_executable(multiplyshiftadd multiplyshiftadd.cpp)
add_executable(n_queens_count n_queens_count.cpp)
add_executable(n_queens_permutation n_queens_permutation.cpp)
add_executable(n_queens n_queens.cpp)
add_executable(nearest_repetition nearest_repetition.cpp)
add_executable(nearest_restaurant nearest_restaurant.cpp)
add_executable(next_permutation next_permutation.cpp)
add_executable(nonconstructible_change nonconstructible_change.cpp)
add_executable(nonuniform_random_number_generation nonuniform_random_number_generation.cpp)
add_executable(normalized_pathnames normalized_pathnames.cpp)
add_executable(number_steps number_steps.cpp)
add_executable(number_ways number_ways.cpp)
add_executable(number_ways_obstacles number_ways_obstacles.cpp)
add_executable(offline_minimum offline_minimum.cpp)
add_executable(offline_sampling offline_sampling.cpp)
add_executable(online_median online_median.cpp)
add_executable(online_sampling online_sampling.cpp)
add_executable(order_statistic order_statistic.cpp)
add_executable(overlapping_days overlapping_days.cpp)
add_executable(overlapping_lists overlapping_lists.cpp)
add_executable(overlapping_lists_no_cycle overlapping_lists_no_cycle.cpp)
add_executable(painting_iterative painting_iterative.cpp)
add_executable(painting_recursive painting_recursive.cpp)
add_executable(palindrome_number palindrome_number.cpp)
add_executable(palindrome_partitioning_min_cuts palindrome_partitioning_min_cuts.cpp)
add_executable(palindrome_partitioning palindrome_partitioning.cpp)
add_executable(palindrome_linked_list palindrome_linked_list.cpp)
add_executable(parity parity.cpp)
add_executable(parity1 parity1.cpp)
add_executable(partition_array partition_array.cpp)
add_executable(partition_2_same_average partition_2_same_average.cpp)
add_executable(pascal_triangle_1 pascal_triangle_1.cpp)
add_executable(pascal_triangle_2 pascal_triangle_2.cpp)
add_executable(path_sum_binary_tree_all path_sum_binary_tree_all.cpp)
add_executable(path_sum_binary_tree path_sum_binary_tree.cpp)
add_executable(permutation_array permutation_array.cpp)
#add_executable(permutations_alternative_profiled permutations_alternative_profiled.cpp)
add_executable(permutations_alternative permutations_alternative.cpp)
add_executable(permutations_unique permutations_unique.cpp)
add_executable(permutations permutations.cpp)
add_executable(phone_mnemonic phone_mnemonic.cpp)
add_executable(picking_up_coins picking_up_coins.cpp)
add_executable(picking_up_coins_dont_lose picking_up_coins_dont_lose.cpp)
add_executable(planning_fishing planning_fishing.cpp)
add_executable(plus_one plus_one.cpp)
add_executable(points_covering_intervals points_covering_intervals.cpp)
add_executable(points_covering_intervals_alternative points_covering_intervals_alternative.cpp)
add_executable(points_covering_intervals_sorting points_covering_intervals_sorting.cpp)
add_executable(populating_next_right_pointers_any_binary_tree populating_next_right_pointers_any_binary_tree.cpp)
add_executable(populating_next_right_pointers populating_next_right_pointers.cpp)
add_executable(power_x_y power_x_y.cpp)
add_executable(power_set power_set.cpp)
add_executable(power_set_alternative power_set_alternative.cpp)
add_executable(prefix_search prefix_search.cpp)
add_executable(pretty_printing pretty_printing.cpp)
add_executable(prime_sieve_basic prime_sieve_basic.cpp)
add_executable(prime_sieve prime_sieve.cpp)
add_executable(print_linked_list_reverse_order print_linked_list_reverse_order.cpp)
add_executable(queue_from_stacks queue_from_stacks.cpp)
add_executable(queue_using_two_integers queue_using_two_integers.cpp)
add_executable(queue_with_max queue_with_max.cpp)
add_executable(queue_with_max_alternative queue_with_max_alternative.cpp)
add_executable(queue_with_max_intro queue_with_max_intro.cpp)
add_executable(rabin_karp rabin_karp.cpp)
add_executable(range_lookup_bst range_lookup_bst.cpp)
add_executable(rays_covering_arcs rays_covering_arcs.cpp)
add_executable(rearrange rearrange.cpp)
add_executable(rebuild_bst_postorder rebuild_bst_postorder.cpp)
add_executable(rebuild_bst_postorder_better rebuild_bst_postorder_better.cpp)
add_executable(rebuild_bst_preorder rebuild_bst_preorder.cpp)
add_executable(rebuild_bst_preorder_better rebuild_bst_preorder_better.cpp)
add_executable(reconstruct_almost_bst reconstruct_almost_bst.cpp)
add_executable(reconstruct_binary_tree_post_in_orders reconstruct_binary_tree_post_in_orders.cpp)
add_executable(reconstruct_binary_tree_pre_in_orders reconstruct_binary_tree_pre_in_orders.cpp)
add_executable(reconstruct_preorder_with_null reconstruct_preorder_with_null.cpp)
add_executable(recover_binary_search_tree_constant_space recover_binary_search_tree_constant_space.cpp)
add_executable(regular_expression regular_expression.cpp)
add_executable(remove_duplicates_from_sorted_array remove_duplicates_from_sorted_array.cpp)
add_executable(remove_duplicates_sorted_list remove_duplicates_sorted_list.cpp)
add_executable(remove_element remove_element.cpp)
add_executable(remove_twice_duplicates_from_sorted_array remove_twice_duplicates_from_sorted_array.cpp)
add_executable(remove_kth_last_list remove_kth_last_list.cpp)
add_executable(rendering_calendar rendering_calendar.cpp)
add_executable(replace_and_remove replace_and_remove.cpp)
add_executable(reservoir_sampling reservoir_sampling.cpp)
add_executable(reverse_integer reverse_integer.cpp)
add_executable(reverse_list_in_k_group reverse_list_in_k_group.cpp)
add_executable(reverse_bits reverse_bits.cpp)
add_executable(reverse_linked_list_from_s_to_f reverse_linked_list_from_s_to_f.cpp)
add_executable(reverse_linked_list_iterative reverse_linked_list_iterative.cpp)
add_executable(reverse_linked_list_recursive reverse_linked_list_recursive.cpp)
add_executable(reverse_words reverse_words.cpp)
add_executable(road_network road_network.cpp)
add_executable(roman_to_integer roman_to_integer.cpp)
add_executable(rook_attack rook_attack.cpp)
add_executable(rotate_array rotate_array.cpp)
add_executable(rpn rpn.cpp)
add_executable(run_length_compression run_length_compression.cpp)
add_executable(score_combination score_combination.cpp)
add_executable(score_combination_alternative score_combination_alternative.cpp)
add_executable(score_permutation score_permutation.cpp)
add_executable(scramble_string scramble_string.cpp)
add_executable(search_a_range_sorted_array search_a_range_sorted_array.cpp)
add_executable(search_insert_position_sorted_array search_insert_position_sorted_array.cpp)
add_executable(search_rotated_sorted_array_with_duplicates search_rotated_sorted_array_with_duplicates.cpp)
add_executable(search_rotated_sorted_array search_rotated_sorted_array.cpp)
add_executable(search_a_pair_sorted_array search_a_pair_sorted_array.cpp)
add_executable(search_bst search_bst.cpp)
add_executable(search_bst_first_larger_k search_bst_first_larger_k.cpp)
add_executable(search_bst_for_first_occurrence_iterative search_bst_for_first_occurrence_iterative.cpp)
add_executable(search_bst_for_first_occurrence_recursive search_bst_for_first_occurrence_recursive.cpp)
add_executable(search_frequent_items search_frequent_items.cpp)
add_executable(search_list search_list.cpp)
add_executable(search_majority search_majority.cpp)
add_executable(search_maze search_maze.cpp)
add_executable(search_min_first_bst search_min_first_bst.cpp)
add_executable(search_postings_list_iterative search_postings_list_iterative.cpp)
add_executable(search_postings_list_recursive search_postings_list_recursive.cpp)
add_executable(shortest_path_fewest_edges shortest_path_fewest_edges.cpp)
add_executable(shortest_unique_prefix shortest_unique_prefix.cpp)
add_executable(sliding_window sliding_window.cpp)
add_executable(smallest_subarray_covering_set smallest_subarray_covering_set.cpp)
add_executable(snake_string snake_string.cpp)
add_executable(sort_list sort_list.cpp)
add_executable(sort_k_increasing_decreasing_array sort_k_increasing_decreasing_array.cpp)
add_executable(sorted_list_to_bst sorted_list_to_bst.cpp)
add_executable(spiral_matrix spiral_matrix.cpp)
add_executable(spiral_matrix_clockwise spiral_matrix_clockwise.cpp)
add_executable(spreadsheet_encoding spreadsheet_encoding.cpp)
add_executable(square_root_int square_root_int.cpp)
add_executable(square_root square_root.cpp)
add_executable(stable_assignment stable_assignment.cpp)
add_executable(stack_queue_using_heap stack_queue_using_heap.cpp)
add_executable(stack_sorting stack_sorting.cpp)
add_executable(stack_with_max stack_with_max.cpp)
add_executable(stack_with_max_improved stack_with_max_improved.cpp)
add_executable(string_in_matrix string_in_matrix.cpp)
add_executable(string_matching_wildcard string_matching_wildcard.cpp)
add_executable(student_search student_search.cpp)
add_executable(student_sort student_sort.cpp)
add_executable(subseq_cover subseq_cover.cpp)
add_executable(substring_with_concatenation_of_all_words substring_with_concatenation_of_all_words.cpp)
add_executable(successor successor.cpp)
add_executable(sudoku_check sudoku_check.cpp)
add_executable(sudoku_solve sudoku_solve.cpp)
add_executable(sum_root_to_leaf_binary_tree sum_root_to_leaf_binary_tree.cpp)
add_executable(surrounded_regions surrounded_regions.cpp)
add_executable(swap_bits swap_bits.cpp)
add_executable(symmetric_binary_tree symmetric_binary_tree.cpp)
add_executable(tail tail.cpp)
add_executable(tail_coin tail_coin.cpp)
add_executable(task_assignment task_assignment.cpp)
add_executable(team_photo_1 team_photo_1.cpp)
add_executable(team_photo_2 team_photo_2.cpp)
add_executable(team_reachability team_reachability.cpp)
add_executable(theory_of_equality theory_of_equality.cpp)
add_executable(three_jugs three_jugs.cpp)
add_executable(ties_election ties_election.cpp)
add_executable(top_k top_k.cpp)
add_executable(tournament_tree tournament_tree.cpp)
add_executable(tower_hanoi tower_hanoi.cpp)
add_executable(transform_string_to_other transform_string_to_other.cpp)
add_executable(transitive_closure transitive_closure.cpp)
add_executable(trapping_rain_water trapping_rain_water.cpp)
add_executable(tree_diameter tree_diameter.cpp)
add_executable(tree_traversal tree_traversal.cpp)
add_executable(triangle triangle.cpp)
add_executable(uniform_random_number_generation uniform_random_number_generation.cpp)
add_executable(union_intervals union_intervals.cpp)
add_executable(unique_binary_trees_all unique_binary_trees_all.cpp)
add_executable(unique_binary_trees unique_binary_trees.cpp)
add_executable(update_bst update_bst.cpp)
add_executable(valid_ip_address valid_ip_address.cpp)
add_executable(valid_number valid_number.cpp)
add_executable(valid_palindrome valid_palindrome.cpp)
add_executable(valid_parentheses valid_parentheses.cpp)
add_executable(valid_ip_address_recursive valid_ip_address_recursive.cpp)
add_executable(view_from_above view_from_above.cpp)
add_executable(view_sunset view_sunset.cpp)
add_executable(wiring_circuit_board wiring_circuit_board.cpp)
add_executable(word_breaking_2 word_breaking_2.cpp)
add_executable(word_breaking word_breaking.cpp)
add_executable(word_breaking_alternative word_breaking_alternative.cpp)
add_executable(zigzag_conversion zigzag_conversion.cpp)
add_executable(zipping_list zipping_list.cpp)

#If thread support is enabled
if (ENV{_GLIBCXX_HAS_GTHREADS})
    add_executable(Two_thread_increment two_thread_increment.cpp)
endif (ENV{_GLIBCXX_HAS_GTHREADS})


# tests
add_executable(anagramstest test/anagrams_test.cpp)
add_executable(anonymous_letter_test test/anonymous_letter_test.cpp)
add_executable(balanced_binary_tree_test test/balanced_binary_tree_test.cpp binary_tree_prototype.h balanced_binary_tree.cpp)
add_executable(c++11_random c++11_random.cpp test/tree_utils.h)
add_executable(container_with_most_water_test test/container_with_most_water_test.cpp)
add_executable(convert_base_test test/convert_base_test.cpp)
add_executable(first_missing_positive_test test/first_missing_positive_test.cpp)
add_executable(gassing_up_test test/gassing_up_test.cpp)
add_executable(intersect_sorted_arrays3_test test/intersect_sorted_arrays3_test.cpp)
add_executable(matrix_search_test test/matrix_search_test.cpp)
add_executable(normalized_pathnames_test test/normalized_pathnames_test.cpp)
add_executable(number_ways_test test/number_ways_test.cpp)
add_executable(palindrome_number_test test/palindrome_number_test.cpp)
add_executable(rpn_test test/rpn_test.cpp)
add_executable(snake_string_test test/snake_string_test.cpp)
add_executable(spreadsheet_encoding_test test/spreadsheet_encoding_test.cpp)
add_executable(square_root_int_test test/square_root_int_test.cpp)
add_executable(sudoku_solve_test test/sudoku_solve_test.cpp)
add_executable(jsonwriter_test test/json_writer_test.cpp)